5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1771_2390.log
== TEST (2019-05-23 14:37:02) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
i = 0
while(i < size(pres)):
	if(pres[i] == max(pres)):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:37:12) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
i = 0
while(i < size(pres)):
	if(pres[i] == max(pres)):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:37:12) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
i = 0
while(i < size(pres)):
	if(pres[i] == max(pres)):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 14:37:12) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
i = 0
while(i < size(pres)):
	if(pres[i] == max(pres)):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s)
-- EXECUTION TIME:
0.337681
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/2390/main.py", line 10, in <module>
    s = s + 1
NameError: name 's' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:37:12) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
i = 0
while(i < size(pres)):
	if(pres[i] == max(pres)):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:37:12) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
i = 0
while(i < size(pres)):
	if(pres[i] == max(pres)):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:37:22) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))

#0 = janeiro,1 = fevereiro,...
i = 0
while(i < size(pres)):
	if(pres[i] == max(pres)):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:37:51) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))

#0 = janeiro,1 = fevereiro,...
i = 0
s = 0
while(i < size(pres)):
	if(pres[i] == max(pres)):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:41:16) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
i = 0
s = 0
while(i < size(pres)):
	if(pres[i] == max(pres)):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s)
i2 = 0
s2 = 0
while(i2 < size(fal)):
	if(fal[i] == min(fal)):
		s2 = s2 + 0
	else:
		s2 = s2 + 1
	i2 = i2 + 1
print(s2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:44:20) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
i = 0
s = 0
while(i < size(pres)):
	if(pres[i] == max(pres)):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s)
i2 = 0
s2 = 0
while(i2 < size(fal)):
	if(fal[i] == min(fal)):
		s2 = s2 + 0
	else:
		s2 = s2 + 1
	i2 = i2 + 1
print(s2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:47:45) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
i = 0
s = 0
while(i < size(pres)):
	if(pres[i] == max(pres)):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s)
i2 = 0
s2 = 0
while(i2 < size(fal)):
	if(fal[i2] == min(fal)):
		s2 = s2 + 0
	else:
		s2 = s2 + 1
	i2 = i2 + 1
print(s2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:48:44) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
i = 0
s = 0
while(i < size(pres)):
	if(pres[i] == max(pres)):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s)
i2 = 0
s2 = 0
while(i2 < size(fal)):
	if(fal[i2] == min(fal)):
		s2 = s2 + 0
	else:
		s2 = s2 + 1
	i2 = i2 + 1
print(s2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:49:28) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
i = 0
s = 0
while(i < size(pres)):
	if(pres[i] == max(pres)):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s)
i2 = 0
s2 = 0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:52:27) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(inpit("faltas: ")))
#0 = janeiro,1 = fevereiro,...
pf = pres - fal
print(pf)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:52:43) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
pf = pres - fal
print(pf)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:55:30) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
pf = pres - fal
i = 0
s = 0
while(i < size(pf)):
	if(pf[i] == max[pf]):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:56:55) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
pf = pres - fal
pf = array(pf)
print(pf)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:57:26) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
pf = pres - fal
pf = array(pf)
i = 0
s = 0
while(i < size(pf)):
	if(pf[i] == max[pf]):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:58:26) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
pf = pres - fal
pf = array(pf)
print(max(pf))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:59:37) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
pf = pres - fal

i = 0
s = 0
while(i < size(pf)):
	if(pf[i] == max[pf]):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:00:37) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
pf = pres - fal
print(pf[0])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:01:31) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
pf = pres - fal
i = 0
s = 0
while(i < size(pf)):
	if(pf[i] == max(pf)):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 15:02:30) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
pf = pres - fal
i = 0
s = 0
while(i < size(pf)):
	if(pf[i] == max(pf)):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s+1)



-- EXECUTION TIME:
0.544771
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
12
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
alunos presentes: faltas: 12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:02:51) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
pf = pres - fal
i = 0
s = 0
while(i < size(pf)):
	if(pf[i] == max(pf)):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s+1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 15:03:37) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
pf = pres - fal
i = 0
s = 0
while(i < size(pf)):
	if(pf[i] == max(pf)):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s+1)



-- EXECUTION TIME:
0.539074
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
12
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:04:06) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
pf = pres - fal
i = 0
s = 1
while(i < size(pf)):
	if(pf[i] == max(pf)):
		s = s + 0
	else:
		s = s + 1
	i = i + 1
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:06:31) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
pf = pres - fal
i = 0
s = 0
while(i < size(pf)):
	if(pf[i] == max(pf)):
		print(i)
	i = i + 1
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 15:07:23) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
pf = pres - fal
i = 0

while(i < size(pf)):
	if(pf[i] == max(pf)):
		print(i+1)
	i = i + 1



-- EXECUTION TIME:
0.377647
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:58:32) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
pf = pres - fal
i = 0

while(i < size(pf)):
	if(pf[i] == max(pf)):
		print(i+1)
	i = i + 1



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:58:33) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
pf = pres - fal
i = 0

while(i < size(pf)):
	if(pf[i] == max(pf)):
		print(i+1)
	i = i + 1



-- EXECUTION TIME:
0.324912
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:59:52) 
-- CODE:
from numpy import *
pres = array(eval(input("alunos presentes: ")))
fal = array(eval(input("faltas: ")))
#0 = janeiro,1 = fevereiro,...
pf = pres - fal
i = 0

while(i < size(pf)):
	if(pf[i] == max(pf)):
		print(i+1)
	i = i + 1



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
